start middle section

--- a/nokosocial-media/style.css
+++ b/nokosocial-media/style.css
@@ -272,3 +272,24 @@ main .container .left .profile {
 .left .notification-popup small {
   display: block;
 }
+
+/* Middle */
+.center .stories {
+  display: flex;
+  justify-content: space-between;
+  height: 12rem;
+  gap: 0.5rem;
+}
+
+.center .stories .story {
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--color-white);
+  font-size: 0.75rem;
+  width: 100%;
+  background: red;
+}
