--- a/nokosocial-media/style.css
+++ b/nokosocial-media/style.css
@@ -291,5 +291,128 @@ main .container .left .profile {
   color: var(--color-white);
   font-size: 0.75rem;
   width: 100%;
-  background: red;
+  position: relative;
+  overflow: hidden;
+}
+
+.center .stories .story::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5rem;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
+  position: absolute;
+  bottom: 0;
+}
+
+.center .stories .story .name {
+  z-index: 2;
+}
+
+.center .stories .story:nth-child(1) {
+  background: url("./assets/images/story-1.jpg") no-repeat center center/cover;
+}
+
+.center .stories .story:nth-child(2) {
+  background: url("./assets/images/story-2.jpg") no-repeat center center/cover;
+}
+
+.center .stories .story:nth-child(3) {
+  background: url("./assets/images/story-3.jpg") no-repeat center center/cover;
+}
+
+.center .stories .story:nth-child(4) {
+  background: url("./assets/images/story-4.jpg") no-repeat center center/cover;
+}
+
+.center .stories .story:nth-child(5) {
+  background: url("./assets/images/story-5.jpg") no-repeat center center/cover;
+}
+
+.center .stories .story:nth-child(6) {
+  background: url("./assets/images/story-6.jpg") no-repeat center center/cover;
+}
+
+.center .story .profile-picture {
+  width: 2rem;
+  height: 2rem;
+  align-self: start;
+  border: 3px solid var(--color-primary);
+}
+
+/* Create Post */
+.center .create-post {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1rem;
+  background: var(--color-white);
+  padding: 0.4rem var(--card-padding);
+  border-radius: var(--border-radius);
+}
+
+.center .create-post input[type="text"] {
+  justify-self: start;
+  width: 100%;
+  padding-left: 1rem;
+  background: transparent;
+  color: var(--color-dark);
+  margin-right: 1rem;
+}
+
+/* Feeds */
+.center .feeds .feed {
+  background: var(--color-white);
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  margin: 1rem 0;
+  font-size: 0.85rem;
+  line-height: 1.5;
+}
+
+.center .feed .head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.center .feed .user {
+  display: flex;
+  gap: 1rem;
+}
+
+.center .feed .photo {
+  border-radius: var(--card-border-radius);
+  overflow: hidden;
+  margin: 0.7rem 0;
+}
+
+.center .feed .action-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+  margin: 0.6rem;
+}
+
+.center .liked-by {
+  display: flex;
+}
+
+.center .liked-by span {
+  width: 1.4rem;
+  height: 1.4rem;
+  display: block;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid var(--color-white);
+  margin-left: -0.7rem;
+}
+
+.center .liked-by span:first-child {
+  margin-left: 0;
+}
+
+.center .liked-by p {
+  margin-left: 0.5rem;
 }
