--- a/nokosocial-media/style.css
+++ b/nokosocial-media/style.css
@@ -1,14 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --color-white: hsl(252, 30%, 100%);
-  --color-light: hsl(252, 30%, 95%);
-  --color-gray: hsl(252, 15%, 65%);
-  --color-primary: hsl(252, 75%, 60%);
+  --primary-color-hue: 252;
+  --dark-color-lightness: 17%;
+  --light-color-lightness: 95%;
+  --white-color-lightness: 100%;
+
+  --color-white: hsl(252, 30%, var(--white-color-lightness));
+  --color-light: hsl(252, 30%, var(--light-color-lightness));
+  --color-gray: hsl(var(--primary-color-hue), 15%, 65%);
+  --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
   --color-secondary: hsl(252, 100%, 90%);
   --color-success: hsl(120, 95%, 65%);
   --color-danger: hsl(0, 95%, 65%);
-  --color-dark: hsl(252, 30%, 17%);
+  --color-dark: hsl(252, 30%, var(--dark-color-lightness));
   --color-black: hsl(252, 30%, 10%);
 
   --border-radius: 2rem;
@@ -547,7 +552,7 @@ main .container .right {
   display: grid;
   place-items: center;
   font-size: 0.9rem;
-  /* display: none; */
+  display: none;
 }
 
 .customize-theme .card {
@@ -555,6 +560,7 @@ main .container .right {
   padding: 3rem;
   border-radius: var(--card-border-radius);
   width: 50%;
+  box-shadow: 0 0 1rem var(--color-primary);
 }
 
 /* Font Size */
@@ -688,9 +694,68 @@ main .container .right {
   margin-right: 1rem;
 }
 
-/* Media Query */
+/* Media Query for small laptops and big tablets */
 @media screen and (max-width: 1200px) {
-  body {
-    background: red;
+  .container {
+    width: 96%;
+  }
+  main .container {
+    grid-template-columns: 5rem auto 30vw;
+    gap: 1rem;
+  }
+  .left {
+    width: 5rem;
+    z-index: 5;
+  }
+  main .container .left .profile {
+    display: none;
+  }
+  .sidebar h3 {
+    display: none;
+  }
+  .left .btn {
+    display: none;
+  }
+  .customize-theme .card {
+    width: 80vw;
+  }
+}
+
+/* Media query for small tablets and mobiles */
+@media screen and (max-width: 992px) {
+  nav .search-bar {
+    display: none;
+  }
+  main .container {
+    grid-template-columns: 0 auto 5rem;
+    gap: 0;
+  }
+  main .container .left {
+    grid-column: 3/4;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
+
+  /* Notification Popup */
+  .left .notification-popup {
+    position: absolute;
+    left: -20rem;
+    width: 20rem;
+  }
+  .left .notification-popup::before {
+    position: absolute;
+    top: 1.3rem;
+    left: calc(20rem - 0.6rem);
+    display: block;
+  }
+  main .container .center {
+    grid-column: 1/3;
+  }
+  main .container .right {
+    display: none;
+  }
+  .customize-theme .card {
+    width: 92vw;
   }
 }
