complete hero section

--- a/hospital-website/style.scss
+++ b/hospital-website/style.scss
@@ -2,3 +2,4 @@
 @import "./partials/mixin"; // mixin place should be before general and after config
 @import "./partials/general";
 @import "./partials/nav";
+@import "./partials/head";
