--- a/hospital-website/partials/_nav.scss
+++ b/hospital-website/partials/_nav.scss
@@ -5,6 +5,7 @@ nav {
   z-index: 10;
   display: grid;
   place-items: center;
+  @include gradientBackground;
   box-shadow: 0 1rem 1rem rgba($color: $black-color, $alpha: 0.1);
 
   .container {
@@ -19,19 +20,97 @@ nav {
     }
 
     a {
-      //   color: $white-color;
+      color: $white-color;
       font-weight: 400;
       font-size: 0.9rem;
+
+      h3 {
+        color: $white-color;
+      }
     }
 
     button {
       display: none;
-      background: transparent;
-      cursor: pointer;
     }
+  }
+}
 
-    button > i {
-      font-size: 1.6rem;
+// Media Queries Medium devices
+@media screen and (max-width: 1024px) {
+  nav {
+    .container {
+      button {
+        display: inline-block;
+        background: transparent;
+        color: $white-color;
+        font-size: 2rem;
+        cursor: pointer;
+
+        &#closeNav {
+          display: none;
+        }
+      }
+
+      ul {
+        position: fixed;
+        right: 5%;
+        top: 5rem;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0;
+        display: none;
+        transition: all 300ms ease;
+        perspective: 300px;
+
+        li {
+          width: 100%;
+          opacity: 0;
+          animation: flipNav 300ms ease forwards;
+          transform-origin: top;
+
+          &:nth-child(2) {
+            animation-duration: 300ms;
+          }
+
+          &:nth-child(3) {
+            animation-duration: 600ms;
+          }
+
+          &:nth-child(4) {
+            animation-duration: 900ms;
+          }
+
+          &:nth-child(5) {
+            animation-duration: 1000ms;
+          }
+
+          @keyframes flipNav {
+            0% {
+              transform: rotateX(90deg);
+            }
+            100% {
+              transform: rotateX(0deg);
+              opacity: 1;
+            }
+          }
+
+          a {
+            color: $white-color;
+            height: 100%;
+            display: block;
+            padding: 1.5rem 2rem;
+            border-radius: 0;
+            background: linear-gradient(
+              $primary-color-variant,
+              darken($primary-color-variant, 12%)
+            );
+
+            &.btn {
+              background: $secondary-color;
+            }
+          }
+        }
+      }
     }
   }
 }
