complete services and specialist section

--- a/hospital-website/style.scss
+++ b/hospital-website/style.scss
@@ -3,3 +3,5 @@
 @import "./partials/general";
 @import "./partials/nav";
 @import "./partials/head";
+@import "./partials/services";
+@import "./partials/specialists";
