--- a/hospital-website/style.scss
+++ b/hospital-website/style.scss
@@ -5,3 +5,6 @@
 @import "./partials/head";
 @import "./partials/services";
 @import "./partials/specialists";
+@import "./partials/testimonials";
+@import "./partials/appointments";
+@import "./partials/footer";
