--- a/ali-portfolio/style.css
+++ b/ali-portfolio/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -5,4 +7,121 @@
   outline: none;
   text-decoration: none;
   list-style: none;
+  border: none;
+}
+
+:root {
+  --container-width-lg: 80%;
+  --container-width-sm: 94%;
+
+  --radius-1: 2rem;
+  --radius-2: 1.2rem;
+  --radius-3: 0.8rem;
+  --radius-4: 0.5rem;
+  --radius-5: 0.3rem;
+
+  --transition: all 300ms ease;
+
+  --primary-hue: 358;
+  --color-primary: hsl(var(--primary-hue), 87%, 44%);
+  --color-nav-bg: hsla(var(--primary-hue), 0%, 100%, 0.4);
+  --color-gray-100: hsl(var(--primary-hue), 0%, 100%);
+  --color-gray-200: hsl(var(--primary-hue), 0%, 95%);
+  --color-gray-300: hsl(var(--primary-hue), 0%, 85%);
+  --color-gray-400: hsl(var(--primary-hue), 0%, 70%);
+  --color-gray-500: hsl(var(--primary-hue), 0%, 55%);
+  --color-gray-600: hsl(var(--primary-hue), 0%, 40%);
+  --color-gray-700: hsl(var(--primary-hue), 0%, 25%);
+  --color-gray-800: hsl(var(--primary-hue), 0%, 15%);
+  --color-gray-900: hsl(var(--primary-hue), 0%, 5%);
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background: var(--color-gray-100);
+  color: var(--color-gray-800);
+  line-height: 1.7;
+  font-weight: 300;
+}
+
+p,
+a,
+figcaption {
+  font-size: 0.85rem;
+}
+
+.container {
+  width: var(--container-width-lg);
+  margin-inline: auto;
+}
+
+img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Outfit", sans-serif;
+  line-height: 1;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 800;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+.btn {
+  background: var(--color-gray-200);
+  color: var(--color-gray-900);
+  display: inline-block;
+  padding: 1rem 2.5rem;
+  border-radius: var(--radius-3);
+  width: fit-content;
+  cursor: pointer;
+  transition: var(--transition);
+}
+
+.btn.sm {
+  padding: 0.4rem 1rem;
+  font-weight: 400;
+  border-radius: var(--radius-4);
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: white;
+}
+
+.btn:hover {
+  background: var(--color-gray-900);
+  color: var(--color-gray-100);
+}
+
+section {
+  padding: 9rem 0;
+}
+
+section > h1,
+section > p {
+  width: 50%;
+  text-align: center;
+  margin-inline: auto;
+}
+
+section > h1 {
+  margin-bottom: 0.5rem;
+}
+
+section:nth-child(odd) {
+  background: var(--color-gray-200);
 }
