--- a/ali-portfolio/style.css
+++ b/ali-portfolio/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
@@ -34,6 +34,10 @@
   --color-gray-700: hsl(var(--primary-hue), 0%, 25%);
   --color-gray-800: hsl(var(--primary-hue), 0%, 15%);
   --color-gray-900: hsl(var(--primary-hue), 0%, 5%);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -124,4 +128,211 @@ section > h1 {
 
 section:nth-child(odd) {
   background: var(--color-gray-200);
+}
+
+/* Navbar */
+nav {
+  background: var(--color-nav-bg);
+  border-bottom: 1px solid var(--color-gray-300);
+  display: grid;
+  place-items: center;
+  height: 3.8rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  -moz-backdrop-filter: blur(15px);
+  -o-backdrop-filter: blur(15px);
+  -ms-backdrop-filter: blur(15px);
+  z-index: 10;
+}
+
+.nav_container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav_logo {
+  width: 2.5em;
+  height: 2.5em;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.nav_logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.nav_menu {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.nav_menu a {
+  color: var(--color-gray-900);
+}
+
+.nav_open,
+.nav_close {
+  display: none;
+}
+.nav_open,
+.nav_close,
+.nav_theme {
+  font-size: 1.5rem;
+  background: transparent;
+  color: var(--color-gray-900);
+  cursor: pointer;
+}
+
+/* Header section */
+header {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+}
+
+.header_container {
+  margin-top: 5rem;
+  position: relative;
+}
+
+.header_image {
+  width: 14rem;
+  aspect-ratio: 3/4;
+  overflow: hidden;
+  max-height: 17rem;
+  margin-inline: auto;
+  border-radius: 7rem 7rem var(--radius-2) var(--radius-2);
+}
+
+.header_image img {
+  height: 100%;
+}
+
+.header_content {
+  text-align: center;
+  margin-top: 2rem;
+  width: 40rem;
+  margin-inline: auto;
+}
+
+.header_content h4 {
+  margin-bottom: 0.7rem;
+}
+
+.header_content h4 span {
+  color: var(--color-primary);
+}
+
+.header_content p {
+  margin: 0.8rem 0 1.5rem;
+}
+
+.header_cta {
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.header_socials {
+  position: absolute;
+  bottom: 3rem;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1.1rem;
+}
+
+.header_socials a {
+  font-size: 1.1rem;
+  background: var(--color-gray-200);
+  color: var(--color-gray-900);
+  padding: 0.3rem 0.5rem;
+  display: inline-block;
+  border-radius: var(--radius-4);
+  transition: var(--transition);
+}
+
+.header_socials a:hover {
+  background: var(--color-primary);
+  color: var(--color-gray-100);
+  transform: translate(-0.5rem);
+}
+
+/* About Section */
+.about_container {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  gap: 7rem;
+}
+
+.about_image {
+  border: 1rem solid var(--color-gray-100);
+  height: fit-content;
+  max-height: 35rem;
+  overflow: hidden;
+}
+
+.about_cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  margin: 3rem 0 1.5rem;
+}
+
+.about_card {
+  background: var(--color-gray-100);
+  padding: 1rem;
+  border-radius: var(--radius-2);
+  text-align: center;
+  transition: var(--transition);
+  cursor: default;
+}
+
+.about_card:hover {
+  background: var(--color-primary);
+  color: var(--color-gray-100);
+  transform: translateY(-0.5rem);
+}
+
+.about_card i {
+  color: var(--color-primary);
+  font-size: 1.4rem;
+  display: inline-block;
+  padding: 0.2rem 0.5rem;
+  border-radius: var(--radius-4);
+}
+
+.about_card:hover i {
+  background: var(--color-gray-100);
+}
+
+.about_card h4 {
+  margin: 1rem 0 0.8rem;
+}
+
+.about_card small {
+  font-size: 0.8rem;
+}
+
+.about_details p {
+  margin-bottom: 0.8rem;
+}
+
+.about_details .btn {
+  margin-top: 1.5rem;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.about_details .btn i {
+  font-size: 1.2rem;
 }
