--- a/ali-portfolio/style.css
+++ b/ali-portfolio/style.css
@@ -80,6 +80,29 @@ body {
   font-weight: 300;
 }
 
+.bg {
+  height: 100vh; /* Set height to 100vh */
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  filter: blur(0px); /* Initial blur value */
+  transition: filter 0.3s ease;
+  overflow: hidden;
+}
+
+.load {
+  z-index: 100;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 50px;
+  color: white;
+}
+
 p,
 a,
 figcaption {
@@ -158,7 +181,7 @@ section > h1 {
   margin-bottom: 0.5rem;
 }
 
-section:nth-child(odd) {
+section:nth-child(even) {
   background: var(--color-gray-200);
 }
 
@@ -501,6 +524,7 @@ header {
 
 /* Testimonials */
 .swiper {
+  width: 100%;
   width: var(--container-width-lg);
   margin: 9rem auto;
 }
